<resources>
    <string name="app_name">圣阳PDA</string>
    <string name="work_center_code">工位编号</string>
    <string name="scan_hint">条码编号</string>
    <string name="device_title">设备编号</string>
    <string name="order_count">订单数量</string>
    <string name="order_hint">请扫描订单编号</string>
    <string name="device_hint">请扫描设备编号</string>
    <string name="submit">提交</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="loginout">退出登陆</string>
    <string name="login">登陆</string>
    <string name="login_worker">工人登陆</string>
    <string name="login_driver">司机登陆</string>
    <string name="manual_mode">手动</string>
    <string name="username">用户名</string>
    <string name="workername">工人账户</string>
    <string name="drivername">司机账户</string>
    <string name="password">密码</string>
    <string name="loginhint">忘记密码?请联系管理员</string>
    <string name="device_scan_complete">已获得设备编号</string>
    <string name="order_scan_complete">已获得订单编号</string>
    <string name="device_scan_incomplete">未获得设备编号</string>
    <string name="order_scan_incomplete">未获得订单编号</string>
    <string name="scan_again">重新扫描</string>
    <string name="start_binding">开始绑定</string>
    <string name="order_binding">订单绑定</string>
    <string name="order_unbind">订单解绑</string>
    <string name="order_number">订单数量:&#160;</string>

    <string name="validate_empty">不能为空</string>
    <string name="validate_only_numchar">只能为字母数字,不能为其他字符</string>
    <string name="login_fail">登陆失败</string>


    <!--程序中使用到的常量-->
    <string name="BASE_URL">http://10.100.172.187:8081/</string>
    <string name="IS_LOGIN">is_login</string>
    <string name="FIRST_USE">first_use</string>
    <string name="NOT_HANDLE">not_handle</string>
    <!--司机-->
    <string name="DRIVER_SESSION">driver_session</string>
    <!--工人-->
    <string name="WORKER_SESSION">worker_session</string>
    <!--工位编号-->
    <string name="WORKCENTERCODE_SESSION">workcentercode_session</string>
    <string name="ORDER_NUMBER">order_number</string>
    <!--订单-->
    <string name="ORDER">order</string>
    <!--设备-->
    <string name="DEVICE">device</string>
    <string name="ORDER_UNBIND">order_unbind</string>
    <string name="ORDER_DESC">订单</string>
    <string name="DEVICE_DESC">设备</string>

</resources>
