<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.CodeScanActivity"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:src="@drawable/sunlogo"
            android:layout_marginBottom="24dp"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/scan_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/normal_edit_text"
                android:hint="@string/device_title"
                app:backgroundTint="@color/edit_text_line"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_scan_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingBottom="24dp"
            android:padding="12dp"
            android:text="@string/scan_again"
            />
        <Button
            android:id="@+id/btn_commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:padding="12dp"
            android:text="@string/order_unbind"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/txt_manual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textColor="@color/normal_txt_color"
        android:textSize="18sp"
        android:text="@string/manual_mode"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="10dp"/>
</RelativeLayout>