<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vstar.sacredsun_android_pda.ui.MainActivity">

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/sunlogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_logo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/order_bind"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            app:cardBackgroundColor="@color/card_bg_color"
            app:cardCornerRadius="3dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bind" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_binding"
                    android:textSize="20sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/order_unbind"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.5"
            app:cardCornerRadius="3dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/card_bg_color">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/unbind" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_unbind"
                    android:textSize="20sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/btn_login_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/loginout"/>
</RelativeLayout>
